# hello-python

./: .gitignore  AGENTS.md  Makefile  README.md  README_zh.md  pyproject.toml
docs/: book.toml
docs/specs/001-python-basic-tutorial/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/src/: SUMMARY.md  about-hello.md  getting-started.md  introduction.md
docs/src/advance/: advance-overview.md  async.md  database.md  dependency-injection.md  fastapi-routes.md  fastapi-server.md  json.md  numpy.md  review-advance.md
docs/src/basic/: basic-overview.md  control-flow.md  datatype.md  exception.md  expression.md  file-io.md  functions.md  list-dict.md  loops.md  modules-packages.md  oop.md  review-basic.md  string-advanced.md
hello_python/: AGENTS.md  __init__.py
hello_python/advance/: AGENTS.md  asyncs_sample.py  database_sample.py  database_sqlite_sample.py  demo_sample.py  fastapi_sample.py  fastapi_server_sample.py  injector_sample.py  json_sample.py  numpy_sample.py
hello_python/basic/: AGENTS.md  control_flow_sample.py  datatype_sample.py  exception_sample.py  expression_sample.py  file_io_sample.py  functions_sample.py  list_dict_sample.py  loops_sample.py  modules_packages_sample.py  oop_sample.py  string_advanced_sample.py
hello_python/cli/: AGENTS.md  __init__.py
tests/: AGENTS.md  test_sample.py
tests/advance/: test_asyncs_sample.py  test_injector_sample.py  test_numpy_sample.py
tests/basic/: test_control_flow_sample.py  test_datatype_sample.py  test_exception_sample.py  test_expression_sample.py  test_file_io_sample.py  test_functions_sample.py  test_list_dict_sample.py  test_loops_sample.py  test_modules_packages_sample.py  test_oop_sample.py  test_string_advanced_sample.py
tests/cli/: test_cli.py
(+5 files in other folders)
