[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = ""
authors = ["RenYan Wei <weirenyan@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
#test = " python -m unittest discover -s tests"